fix: back to cluster because apparently sentinel isn't actually sentinel and maybe cluster is actually sentinel

--- a/k8s/apps/database/redis/cluster/redis7.yaml
+++ b/k8s/apps/database/redis/cluster/redis7.yaml
@@ -4,13 +4,11 @@ metadata:
   name: redis-7
 spec:
   clusterSize: 1
+  clusterVersion: v7
   podSecurityContext:
     runAsUser: 1000
     fsGroup: 1000
-  pdb:
-    enabled: true
-  externalService:
-    enabled: true
+  persistenceEnabled: true
   kubernetesConfig:
     image: quay.io/opstree/redis:v7.0.12
     imagePullPolicy: IfNotPresent
@@ -34,3 +32,18 @@ spec:
     env:
       - name: REDIS_EXPORTER_INCL_SYSTEM_METRICS
         value: "true"
+  storage:
+    volumeClaimTemplate:
+      spec:
+        storageClassName: "openebs-hostpath"
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 1Gi
+    nodeConfVolumeClaimTemplate:
+      spec:
+        storageClassName: "openebs-hostpath"
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 1Gi
