--- a/k8s/apps/database/redis/cluster/redis7.yaml
+++ b/k8s/apps/database/redis/cluster/redis7.yaml
@@ -1,14 +1,14 @@
 apiVersion: redis.redis.opstreelabs.in/v1beta2
 kind: RedisCluster
 metadata:
-  name: redis-7
+  name: redis7
 spec:
   clusterSize: 1
   clusterVersion: v7
+  persistenceEnabled: true
   podSecurityContext:
     runAsUser: 1000
     fsGroup: 1000
-  persistenceEnabled: true
   kubernetesConfig:
     image: quay.io/opstree/redis:v7.0.12
     imagePullPolicy: IfNotPresent
@@ -35,15 +35,16 @@ spec:
   storage:
     volumeClaimTemplate:
       spec:
-        storageClassName: "openebs-hostpath"
+        storageClassName: openebs-hostpath
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
             storage: 1Gi
+    nodeConfVolume: true
     nodeConfVolumeClaimTemplate:
       spec:
-        storageClassName: "openebs-hostpath"
+        storageClassName: openebs-hostpath
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
-            storage: 1Gi
+            storage: 256Mi
