--- a/k8s/apps/default/overseerr/app/helmrelease.yaml
+++ b/k8s/apps/default/overseerr/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: plex
+  name: overseerr
 spec:
   interval: 30m
   chart:
@@ -22,44 +22,37 @@ spec:
       strategy: rollback
       retries: 3
   dependsOn:
-    - name: intel-device-plugin-gpu
-      namespace: kube-system
     - name: rook-ceph-cluster
       namespace: rook-ceph
     - name: volsync
       namespace: volsync-system
   values:
     controllers:
-      plex:
+      overseerr:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
           app:
             image:
-              repository: ghcr.io/onedr0p/plex
-              tag: 1.41.1.9057-af5eaea7a@sha256:5926b77196bb7c9f75b52f431d0483abea0fef1f576b7201592b385449201456
+              repository: ghcr.io/sct/overseerr
+              tag: develop@sha256:568f126f69663cf764d12bf19ba5a250be2246cca49852e556f363d0acac2603
             env:
               TZ: Australia/Sydney
-              PLEX_ADVERTISE_URL: https://plex.${SECRET_HOME_DOMAIN}:443,http://192.168.68.129:32400
-              PLEX_NO_AUTH_NETWORKS: 192.168.68.0/24
+              LOG_LEVEL: "info"
+              PORT: &port 80
             probes:
               liveness: &probes
                 enabled: true
                 custom: true
                 spec:
                   httpGet:
-                    path: /identity
-                    port: 32400
+                    path: /api/v1/status
+                    port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
                   failureThreshold: 3
               readiness: *probes
-              startup:
-                enabled: true
-                spec:
-                  failureThreshold: 30
-                  periodSeconds: 10
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
@@ -69,8 +62,7 @@ spec:
                 cpu: 10m
                 memory: 100Mi
               limits:
-                gpu.intel.com/i915: 1
-                memory: 16Gi
+                memory: 2Gi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -78,27 +70,20 @@ spec:
         runAsGroup: 568
         fsGroup: 568
         fsGroupChangePolicy: OnRootMismatch
-        supplementalGroups: [44, 10000]
         seccompProfile: {type: RuntimeDefault}
-      nodeSelector:
-        intel.feature.node.kubernetes.io/gpu: "true"
     service:
       app:
-        controller: plex
-        type: LoadBalancer
-        annotations:
-          lbipam.cilium.io/ips: 192.168.42.129
+        controller: overseerr
         ports:
           http:
-            port: 32400
+            port: *port
     ingress:
       app:
         annotations:
           external-dns.alpha.kubernetes.io/target: external.${SECRET_HOME_DOMAIN}
-          nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         className: external
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
+          - host: requests.${SECRET_HOME_DOMAIN}
             paths:
               - path: /
                 service:
@@ -106,27 +91,16 @@ spec:
                   port: http
     persistence:
       config:
-        # existingClaim: plex
-        # TODO: If setting up Plex for the first time, you'll want to add the globalMounts section
+        existingClaim: overseerr
         globalMounts:
-          - path: /config/Library/Application Support/Plex Media Server
-      # Separate PVC for cache to avoid backing up cache files
+          - path: /app/config
       cache:
-        existingClaim: plex-cache
+        existingClaim: overseerr-cache
         globalMounts:
-          - path: /config/Library/Application Support/Plex Media Server/Cache
+          - path: /app/config/cache
       logs:
         type: emptyDir
         globalMounts:
-          - path: /config/Library/Application Support/Plex Media Server/Logs
+          - path: /app/config/logs
       tmp:
         type: emptyDir
-      transcode:
-        type: emptyDir
-      media:
-        type: nfs
-        server: 192.168.68.10
-        path: /mnt/nfs
-        globalMounts:
-          - path: /media
-            readOnly: true
