--- a/k8s/apps/default/overseerr/app/pvc.yaml
+++ b/k8s/apps/default/overseerr/app/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: plex
+  name: overseerr
 spec:
   accessModes: ["ReadWriteMany"]
   resources:
