--- a/k8s/apps/database/redis/app/helmrelease.yaml
+++ b/k8s/apps/database/redis/app/helmrelease.yaml
@@ -22,4 +22,9 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    resources: {}
+    resources:
+      requests:
+        cpu: 10m
+        memory: 100Mi
+      limits:
+        memory: 1Gi
