--- a/k8s/apps/database/dragonfly/ks.yaml
+++ b/k8s/apps/database/dragonfly/ks.yaml
@@ -1,43 +1,41 @@
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app redis
+  name: &app dragonfly
   namespace: flux-system
 spec:
   targetNamespace: database
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: external-secrets-stores
-  path: ./k8s/apps/database/redis/app
-  prune: true
+  path: ./k8s/apps/database/dragonfly/app
   sourceRef:
     kind: GitRepository
     name: homelab
+  prune: true
   wait: true
   interval: 30m
   timeout: 5m
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app redis-cluster
+  name: &app dragonfly-cluster
   namespace: flux-system
+  labels:
+    substitution.flux.home.arpa/enabled: "true"
 spec:
   targetNamespace: database
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: redis
-  path: ./k8s/apps/database/redis/cluster
-  prune: true
+  path: ./k8s/apps/database/dragonfly/cluster
   sourceRef:
     kind: GitRepository
     name: homelab
-  wait: true
+  dependsOn:
+    - name: dragonfly
+  prune: true
+  wait: false
   interval: 30m
   timeout: 5m
