--- a/k8s/apps/default/immich/app/externalsecret.yaml
+++ b/k8s/apps/default/immich/app/externalsecret.yaml
@@ -23,6 +23,12 @@ spec:
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
+        IMMICH_WEB_URL: http://immich.default.svc.cluster.local:3000
+        IMMICH_SERVER_URL: http://immich.default.svc.cluster.local:3001
+        PUBLIC_IMMICH_SERVER_URL: https://photos.${SECRET_HOME_DOMAIN}
+        REDIS_HOSTNAME: "dragonfly.databases.svc.cluster.local"
+        REDIS_PORT: "6379"
+        REDIS_DBINDEX: "2"
   dataFrom:
     - extract:
         key: cloudnative-pg
