--- a/k8s/apps/default/immich/ks.yaml
+++ b/k8s/apps/default/immich/ks.yaml
@@ -1,4 +1,3 @@
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -12,7 +11,7 @@ spec:
   dependsOn:
     - name: external-secrets-stores
     - name: cloudnative-pg-cluster
-    - name: redis-cluster
+    - name: dragonfly-cluster
   path: ./k8s/apps/default/immich/app
   prune: true
   sourceRef:
