--- a/k8s/apps/database/dragonfly/app/kustomization.yaml
+++ b/k8s/apps/database/dragonfly/app/kustomization.yaml
@@ -4,4 +4,4 @@ resources:
   # renovate: datasource=github-releases depName=dragonflydb/dragonfly-operator
   - https://raw.githubusercontent.com/dragonflydb/dragonfly-operator/v1.1.7/manifests/crd.yaml
   - ./rbac.yaml
-  - ./helm-release.yaml
+  - ./helmrelease.yaml
