--- a/k8s/apps/database/dragonfly/app/rbac.yaml
+++ b/k8s/apps/database/dragonfly/app/rbac.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: dragonfly-operator
+  name: dragonfly
 rules:
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
@@ -28,12 +28,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: dragonfly-operator
+  name: dragonfly
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: dragonfly-operator
+  name: dragonfly
 subjects:
   - kind: ServiceAccount
-    name: dragonfly-operator
-    namespace: databases
+    name: dragonfly
+    namespace: database
