--- a/k8s/apps/database/dragonfly/cluster/dragonfly-cluster.yaml
+++ b/k8s/apps/database/dragonfly/cluster/dragonfly-cluster.yaml
@@ -8,16 +8,13 @@ spec:
   image: docker.dragonflydb.io/dragonflydb/dragonfly:v1.24.0@sha256:9d7fbf70085b5bb13570e2a4019cc14e6bf74576eec339de89c6aeda7025c847
   replicas: 3
   args:
-    - --maxmemory=$(MAX_MEMORY)Mi
+    - --maxmemory=512Mi
     - --proactor_threads=2
     - --cluster_mode=emulated
     - --lock_on_hashtags
   env:
     - name: MAX_MEMORY
-      valueFrom:
-        resourceFieldRef:
-          resource: limits.memory
-          divisor: 1Mi
+      value: 512Mi
   resources:
     requests:
       cpu: 100m
