fix: set pgvector in env

--- a/k8s/apps/default/immich/app/externalsecret.yaml
+++ b/k8s/apps/default/immich/app/externalsecret.yaml
@@ -28,6 +28,7 @@ spec:
         REDIS_HOSTNAME: "dragonfly.databases.svc.cluster.local"
         REDIS_PORT: "6379"
         REDIS_DBINDEX: "2"
+        DB_VECTOR_EXTENSION: pgvector
   dataFrom:
     - extract:
         key: cloudnative-pg
