--- a/k8s/apps/volsync-system/volsync/ks.yaml
+++ b/k8s/apps/volsync-system/volsync/ks.yaml
@@ -9,6 +9,8 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  dependsOn:
+    - name: kyverno-policies
   path: ./k8s/apps/volsync-system/volsync/app
   prune: true
   sourceRef:
