feat: add volsync variables to ks

--- a/k8s/apps/default/overseerr/ks.yaml
+++ b/k8s/apps/default/overseerr/ks.yaml
@@ -23,3 +23,6 @@ spec:
       GATUS_SUBDOMAIN: requests
       GATUS_PATH: /api/v1/status
       VOLSYNC_CAPACITY: 5Gi
+      VOLSYNC_ACCESSMODES: ReadWriteMany
+      VOLSYNC_STORAGECLASS: ceph-filesystem
+      VOLSYNC_SNAPSHOTCLASS: csi-ceph-filesystem
