--- a/k8s/apps/default/home-assistant/ks.yaml
+++ b/k8s/apps/default/home-assistant/ks.yaml
@@ -24,3 +24,6 @@ spec:
       APP: *app
       GATUS_SUBDOMAIN: hass
       VOLSYNC_CAPACITY: 5Gi
+      VOLSYNC_ACCESSMODES: ReadWriteMany
+      VOLSYNC_STORAGECLASS: ceph-filesystem
+      VOLSYNC_SNAPSHOTCLASS: csi-ceph-filesystem
