--- a/k8s/apps/default/stash/ks.yaml
+++ b/k8s/apps/default/stash/ks.yaml
@@ -22,3 +22,6 @@ spec:
       APP: *app
       VOLSYNC_CAPACITY: 30Gi
       VOLSYNC_CACHE_CAPACITY: 8Gi
+      VOLSYNC_ACCESSMODES: ReadWriteMany
+      VOLSYNC_STORAGECLASS: ceph-filesystem
+      VOLSYNC_SNAPSHOTCLASS: csi-ceph-filesystem
