--- a/k8s/apps/default/thelounge/ks.yaml
+++ b/k8s/apps/default/thelounge/ks.yaml
@@ -20,3 +20,7 @@ spec:
     substitute:
       APP: *app
       GATUS_SUBDOMAIN: irc
+      VOLSYNC_CAPACITY: 1Gi
+      VOLSYNC_ACCESSMODES: ReadWriteMany
+      VOLSYNC_STORAGECLASS: ceph-filesystem
+      VOLSYNC_SNAPSHOTCLASS: csi-ceph-filesystem
