--- a/k8s/apps/default/echo-server/app/helmrelease.yaml
+++ b/k8s/apps/default/echo-server/app/helmrelease.yaml
@@ -81,10 +81,10 @@ spec:
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: external.${SECRET_DEV_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_HOME_DOMAIN}
         className: external
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_DEV_DOMAIN}"
+          - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
             paths:
               - path: /
                 service:
