feat: use two domains
* One certificate consolidated to home domain but usable on both domains
* Routes dev domain to home domain ingress

--- a/k8s/apps/cert-manager/certificates/export/certificates.yaml
+++ b/k8s/apps/cert-manager/certificates/export/certificates.yaml
@@ -14,3 +14,5 @@ spec:
   dnsNames:
     - "${SECRET_HOME_DOMAIN}"
     - "*.${SECRET_HOME_DOMAIN}"
+    - "${SECRET_DEV_DOMAIN}"
+    - "*.${SECRET_DEV_DOMAIN}"
