--- a/k8s/apps/cert-manager/certificates/import/externalsecret.yaml
+++ b/k8s/apps/cert-manager/certificates/import/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
       type: kubernetes.io/tls
       metadata:
         annotations:
-          cert-manager.io/alt-names: "*.${SECRET_HOME_DOMAIN},${SECRET_HOME_DOMAIN}"
+          cert-manager.io/alt-names: "*.${SECRET_HOME_DOMAIN},${SECRET_HOME_DOMAIN},*.${SECRET_DEV_DOMAIN},${SECRET_DEV_DOMAIN}"
           cert-manager.io/certificate-name: "${SECRET_HOME_DOMAIN//./-}"
           cert-manager.io/common-name: "${SECRET_HOME_DOMAIN}"
           cert-manager.io/ip-sans: ""
