--- a/k8s/flux/vars/cluster-secrets.sops.yaml
+++ b/k8s/flux/vars/cluster-secrets.sops.yaml
@@ -4,10 +4,10 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 stringData:
-  SECRET_HOME_DOMAIN: ENC[AES256_GCM,data:Kjk7oYouGefAC/w6rw==,iv:Pzc8JfqnelsGWyNOJsT/jKY35jcSPzrGV+Kai48ZzRM=,tag:BgIsMbuN7pldnUBhTP/O7w==,type:str]
-  SECRET_DEV_DOMAIN: ENC[AES256_GCM,data:TD7uXsL40EEUCOw=,iv:ZHgh/Nh/nRvKF6AMrkRpxtjx0e2+KV+78DWgZlSfDUg=,tag:wqfHzbtJoU7yKLIt80b6lw==,type:str]
-  SECRET_ACME_EMAIL: ENC[AES256_GCM,data:cdqSs7Lz6C965wKSwPTje4kv5rKcf7g9,iv:9Jc8e1zSWLOVC2EWT+HGrwRJoMNH9eVKBmKinUoVIkI=,tag:d9ZU4XoIe+FqvxEhV+j+ug==,type:str]
-  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:++kiFTx5/WOrvbF/8Y7O6Va9dL+LwhdBfflHT2rqvcKEYLjw,iv:mPNDJJxn65yzNo12WrlpBYlTyfzlAwE5QhYhSZ/jEWw=,tag:nv26Zn67yBwvd4xMm2H5fg==,type:str]
+  SECRET_HOME_DOMAIN: ENC[AES256_GCM,data:PAMbTaymFjFMNPMmAg==,iv:m43ST1Nl3R/TXSbtv6cqW8gk0hjkUS+KvunPIooU/4E=,tag:AAhN/5UNiJOgnu1Uc3GxSw==,type:str]
+  SECRET_DEV_DOMAIN: ENC[AES256_GCM,data:vTTOa+vdCRp2+IY=,iv:NKtqu0kYd4eb81XHS8u9af06lwpUiCLKVUyPs8dCx0E=,tag:gPLeclp/vEXDg7WNfzRLtg==,type:str]
+  SECRET_ACME_EMAIL: ENC[AES256_GCM,data:iqSlB84wPCVNUr5CGOO+uQ==,iv:m0H3MBy3B8jpjiM/k0qzmBtEtl2xbiYH46nz8VYfCI8=,tag:EIPvb/jojX9612db4VpL3A==,type:str]
+  SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:7DxnTGu+T1SxqLRnUG0CJ0esmx9LfF03uMDbYjwiYCgIv1BL,iv:51f2chdVs3s2j0zu+ykfkqluazw/JIw6nGrLK9+uWoU=,tag:WCdjrSIGkcpp+VyIz0s14Q==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -17,14 +17,14 @@ sops:
     - recipient: age1yq7xwc03yg7gp2ew9k3jehrz6ctlmuwsffypwvskvl27e26frqmqa5d7de
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0ZnlvMUxid3hkYTFwWWw1
-        VTVveVhRNGgxZUJqSXNvUzRJZm9DOHljc21zCkZRRlZ0R1BONkN5VloxZmRUTEtz
-        QWxwNWtKRCtHK1lndm1STnVUNDJmem8KLS0tIGpBaGJWUGJVNkxITVNNU0hzOVlk
-        KzZmc2c1dkdFNnNKdXVEREFWRW92NHcKANcvk9Qv/DYBTyosU2y5D0okdm2BDkgF
-        kwQgW6YdLOzjHWpmLpk+fNX+pIITOXiq36g2EdWMY8fuHBlqKNnnnw==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFOFZYcEVEbk1yVTgzYVhP
+        QW8zdzZzSjhoWk1uUzQxczlpVzk5WTZ6Q3c4Ck1VZEJzMDNtS2ZEdEEyNUZqWERD
+        ekRtbmpSME8vRXNmSWRXVEsvdXkxelkKLS0tIEFGUWE2WEZ3UkVlcGNRVWRqSjQx
+        eDBmbHhacGdCdjNQWlVKTlc0ZTFSckEKk6M+h/pAABhG4q3jEUCPfm62Wf5Nfw4m
+        6psBxFVWFt8yMX2OKYlCel6vgOjit5bHLTnHsYO9gcJOar/Tca6Fyg==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2024-11-06T07:14:19Z"
-  mac: ENC[AES256_GCM,data:QzqKgWW+PYu6kbeTi4MEdyB4KDFHTE0tfWdYS503QJ0MroZK59bP2tdiqgBjx4jwoYPajp48PKkum7ountn2NV0HJyxpPUwj4O5S+qDRDgOOtYcNRXVSYXshZAGPkUyrtCI/26dqUC8lQSJ6AtmSH8sLGVO9VF9Y5KLbHshhtpQ=,iv:vi3BhUiL45QaV+5182IgOZT2vyfe03byA7Dixqn3UuE=,tag:iaeQgb3hqr1JOQPj9tCGyA==,type:str]
+  lastmodified: "2024-11-12T00:45:40Z"
+  mac: ENC[AES256_GCM,data:qjIRNLAh2SEWyIgC80mURPZm7YxQewutymPJ+idINboFLzdV1/mntVrnQnxi+XuqMyDF+htqPMKW6zH1DvluSmPskm5UGm996M5NK3ANjcsILSpJTFw7rmbvDDevLQ6LbatHRPB8sduKz1Z/3/EQgMv4REMAUqr8Sc2vkvUmNDc=,iv:/oB7AjzEaeQUtQYVQ3FF3QxqvABcQ325Pwv7z8QFICw=,tag:IxJ2lQYuBV59oOtPJmM+vQ==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   version: 3.9.1
