--- a/k8s/apps/network/cloudflared/app/configs/config.yaml
+++ b/k8s/apps/network/cloudflared/app/configs/config.yaml
@@ -1,12 +1,20 @@
 originRequest:
-  originServerName: "external.${SECRET_HOME_DOMAIN}"
+  http2Origin: true
 ingress:
   - hostname: "${SECRET_HOME_DOMAIN}"
     service: https://nginx-external-controller.network.svc.cluster.local:443
+    originRequest:
+      originServerName: "external.${SECRET_HOME_DOMAIN}"
   - hostname: "*.${SECRET_HOME_DOMAIN}"
     service: https://nginx-external-controller.network.svc.cluster.local:443
+    originRequest:
+      originServerName: "external.${SECRET_HOME_DOMAIN}"
   - hostname: "${SECRET_DEV_DOMAIN}"
     service: https://nginx-external-controller.network.svc.cluster.local:443
+    originRequest:
+      originServerName: "external.${SECRET_HOME_DOMAIN}"
   - hostname: "*.${SECRET_DEV_DOMAIN}"
     service: https://nginx-external-controller.network.svc.cluster.local:443
+    originRequest:
+      originServerName: "external.${SECRET_HOME_DOMAIN}"
   - service: http_status:404
