--- a/k8s/apps/default/echo-server/app/helmrelease.yaml
+++ b/k8s/apps/default/echo-server/app/helmrelease.yaml
@@ -84,7 +84,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: external.${SECRET_HOME_DOMAIN}
         className: external
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
+          - host: "{{ .Release.Name }}.${SECRET_DEV_DOMAIN}"
             paths:
               - path: /
                 service:
