fix: bazarr mount path

--- a/k8s/apps/default/bazarr/app/helmrelease.yaml
+++ b/k8s/apps/default/bazarr/app/helmrelease.yaml
@@ -120,7 +120,7 @@ spec:
         server: 192.168.68.10
         path: /mnt/nfs/media/
         globalMounts:
-          - path: /media
+          - path: /data
       scripts:
         type: configMap
         name: bazarr-scripts
