fix: bazarr path for real

--- a/k8s/apps/default/bazarr/app/helmrelease.yaml
+++ b/k8s/apps/default/bazarr/app/helmrelease.yaml
@@ -118,7 +118,7 @@ spec:
       media:
         type: nfs
         server: 192.168.68.10
-        path: /mnt/nfs/media/
+        path: /mnt/nfs
         globalMounts:
           - path: /data
       scripts:
