--- a/k8s/apps/default/lidarr/app/helmrelease.yaml
+++ b/k8s/apps/default/lidarr/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: readarr
+  name: lidarr
 spec:
   interval: 30m
   chart:
@@ -26,7 +26,7 @@ spec:
       namespace: rook-ceph
   values:
     controllers:
-      readarr:
+      lidarr:
         annotations:
           reloader.stakater.com/auto: "true"
         initContainers:
@@ -36,45 +36,36 @@ spec:
               tag: 16
             envFrom: &envFrom
               - secretRef:
-                  name: readarr-secret
+                  name: lidarr-secret
             env:
-              INIT_POSTGRES_DBNAME: readarr_main
-          init-cache-db:
-            image:
-              repository: ghcr.io/onedr0p/postgres-init
-              tag: 16
-            envFrom: &envFrom
-              - secretRef:
-                  name: readarr-secret
-            env:
-              INIT_POSTGRES_DBNAME: readarr_cache
-          init-log-db:
-            image:
-              repository: ghcr.io/onedr0p/postgres-init
-              tag: 16
-            envFrom: &envFrom
-              - secretRef:
-                  name: readarr-secret
-            env:
-              INIT_POSTGRES_DBNAME: readarr_log
+              INIT_POSTGRES_DBNAME: lidarr_main
+              # init-log-db:
+              #   image:
+              #     repository: ghcr.io/onedr0p/postgres-init
+              #     tag: 16
+              #   envFrom: &envFrom
+              #     - secretRef:
+              #         name: lidarr-secret
+              #   env:
+              #     INIT_POSTGRES_DBNAME: lidarr_log
         containers:
           app:
             image:
-              repository: lscr.io/linuxserver/readarr
+              repository: lscr.io/linuxserver/lidarr
               tag: develop
             env:
-              READARR__APP__INSTANCENAME: Readarr
-              # READARR__APP__THEME: dark
-              READARR__AUTH__METHOD: External
-              READARR__AUTH__REQUIRED: DisabledForLocalAddresses
-              READARR__LOG__DBENABLED: false
-              READARR__LOG__LEVEL: info
-              READARR__SERVER__PORT: &port 80
-              READARR__UPDATE__BRANCH: develop
+              LIDARR__APP__INSTANCENAME: lidarr
+              # LIDARR__APP__THEME: dark
+              LIDARR__AUTH__METHOD: External
+              LIDARR__AUTH__REQUIRED: DisabledForLocalAddresses
+              LIDARR__LOG__DBENABLED: false
+              LIDARR__LOG__LEVEL: info
+              LIDARR__SERVER__PORT: &port 80
+              LIDARR__UPDATE__BRANCH: develop
               TZ: "Australia/Sydney"
             envFrom:
               - secretRef:
-                  name: readarr-secret
+                  name: lidarr-secret
             probes:
               liveness: &probes
                 enabled: true
@@ -99,7 +90,7 @@ spec:
                 memory: 4Gi
     service:
       app:
-        controller: readarr
+        controller: lidarr
         ports:
           http:
             port: *port
@@ -117,7 +108,7 @@ spec:
                   port: http
     persistence:
       config:
-        existingClaim: readarr
+        existingClaim: lidarr
       tmp:
         type: emptyDir
       media:
