--- a/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -5,7 +5,7 @@ metadata:
   name: postgres16
 spec:
   instances: 1
-  imageName: ghcr.io/tensorchord/cloudnative-pgvecto.rs:16.4
+  imageName: ghcr.io/cloudnative-pg/postgresql:16.4-51
   primaryUpdateStrategy: unsupervised
   storage:
     size: 20Gi
@@ -17,8 +17,6 @@ spec:
     parameters:
       max_connections: "400"
       shared_buffers: 256MB
-    shared_preload_libraries:
-      - "vectors.so"
   nodeMaintenanceWindow:
     inProgress: false
     reusePVC: true
@@ -38,8 +36,8 @@ spec:
       wal:
         compression: bzip2
         maxParallel: 8
-      destinationPath: s3://cloudnative-pg/
-      endpointURL: http://minio.default.svc.cluster.local:9000
+      destinationPath: s3://solanyn-cnpg-backups/
+      endpointURL: s3.us-east-005.backblazeb2.com
       # Note: serverName version needs to be incremented
       # when recovering from an existing cnpg cluster
       serverName: &currentCluster postgres16-v2
