--- a/k8s/apps/default/cross-seed/app/externalsecret.yaml
+++ b/k8s/apps/default/cross-seed/app/externalsecret.yaml
@@ -34,12 +34,13 @@ spec:
             skipRecheck: true,
             sonarr: ["http://sonarr.default.svc.cluster.local/?apikey={{ .SONARR_API_KEY }}"],
             torrentDir: "/qbittorrent/qBittorrent/BT_backup",
-            torznab: []
-            // torznab: [
-            //     88, // HUNO
-            //     89, // OTW
-            //     90, // FNP
-            // ].map(i => `http://prowlarr.default.svc.cluster.local/$${i}/api?apikey={{ .PROWLARR_API_KEY }}`),
+            torznab: [
+               1, // PHD
+               2, // AvistaZ
+               3, // ExoticaZ
+               4, // MAM
+               5, // HappyFappy
+            ].map(i => `http://prowlarr.default.svc.cluster.local/$${i}/api?apikey={{ .PROWLARR_API_KEY }}`),
           };
   dataFrom:
     - extract:
