chore: use dns name for nas

--- a/k8s/apps/default/filebrowser/app/helmrelease.yaml
+++ b/k8s/apps/default/filebrowser/app/helmrelease.yaml
@@ -89,7 +89,7 @@ spec:
         existingClaim: filebrowser
       data:
         type: nfs
-        server: 192.168.68.10
+        server: nas.internal
         path: /mnt/nfs
         globalMounts:
           - path: /data
