--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -131,7 +131,7 @@ spec:
           - readOnly: true
       media:
         type: nfs
-        server: 192.168.68.10
+        server: nas.internal
         path: /mnt/nfs
         globalMounts:
           - path: /data
