--- a/k8s/apps/default/bazarr/app/helmrelease.yaml
+++ b/k8s/apps/default/bazarr/app/helmrelease.yaml
@@ -117,7 +117,7 @@ spec:
           - path: /config/log
       media:
         type: nfs
-        server: 192.168.68.10
+        server: nas.internal
         path: /mnt/nfs
         globalMounts:
           - path: /data
