--- a/k8s/apps/observability/blackbox-exporter/app/helmrelease.yaml
+++ b/k8s/apps/observability/blackbox-exporter/app/helmrelease.yaml
@@ -26,10 +26,10 @@ spec:
     ingress:
       enabled: true
       annotations:
-        external-dns.alpha.kubernetes.io/target: internal.devbu.io
+        external-dns.alpha.kubernetes.io/target: internal.${SECRET_HOME_DOMAIN}
       className: internal
       hosts:
-        - host: blackbox-exporter.devbu.io
+        - host: blackbox-exporter.${SECRET_HOME_DOMAIN}
           paths:
             - path: /
               pathType: Prefix
