fix: add op key

--- a/k8s/apps/observability/gatus/app/externalsecret.yaml
+++ b/k8s/apps/observability/gatus/app/externalsecret.yaml
@@ -24,6 +24,8 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
   dataFrom:
     - extract:
+        key: nas
+    - extract:
         key: cloudnative-pg
     - extract:
         key: gatus
