fix: nas group in gatus

--- a/k8s/apps/observability/gatus/app/resources/config.yaml
+++ b/k8s/apps/observability/gatus/app/resources/config.yaml
@@ -47,7 +47,7 @@ endpoints:
     alerts:
       - type: pushover
   - name: nas
-    group: guarded
+    group: infrastructure
     url: "ssh://nas.internal"
     interval: 1m
     ssh:
