--- a/k8s/apps/default/maintainerr/app/helmrelease.yaml
+++ b/k8s/apps/default/maintainerr/app/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
       app:
         className: internal
         annotations:
-          external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
+          external-dns.alpha.kubernetes.io/target: internal.${SECRET_HOME_DOMAIN}
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
             paths:
