--- a/k8s/apps/observability/gatus/app/externalsecret.yaml
+++ b/k8s/apps/observability/gatus/app/externalsecret.yaml
@@ -13,7 +13,7 @@ spec:
       engineVersion: v2
       data:
         SECRET_HOME_DOMAIN: ${SECRET_HOME_DOMAIN}
-        NAS_SSH_USER: "{{ .NAS_SSH_PASSWORD }}"
+        NAS_SSH_USER: "{{ .NAS_SSH_USER }}"
         NAS_SSH_PASSWORD: "{{ .NAS_SSH_PASSWORD }}"
         PUSHOVER_TOKEN: "{{ .GATUS_PUSHOVER_TOKEN }}"
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
