--- a/k8s/apps/observability/gatus/app/externalsecret.yaml
+++ b/k8s/apps/observability/gatus/app/externalsecret.yaml
@@ -15,6 +15,8 @@ spec:
         SECRET_HOME_DOMAIN: ${SECRET_HOME_DOMAIN}
         NAS_SSH_USER: "{{ .NAS_SSH_USER }}"
         NAS_SSH_PASSWORD: "{{ .NAS_SSH_PASSWORD }}"
+        PI_SSH_USER: "{{ .PI_SSH_USER }}"
+        PI_SSH_PASSWORD: "{{ .PI_SSH_PASSWORD }}"
         PUSHOVER_TOKEN: "{{ .GATUS_PUSHOVER_TOKEN }}"
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
         INIT_POSTGRES_DBNAME: gatus
@@ -25,6 +27,8 @@ spec:
   dataFrom:
     - extract:
         key: nas
+    - extract:
+        key: pihole
     - extract:
         key: cloudnative-pg
     - extract:
