--- a/k8s/apps/observability/gatus/app/resources/config.yaml
+++ b/k8s/apps/observability/gatus/app/resources/config.yaml
@@ -62,3 +62,19 @@ endpoints:
       - "[CONNECTED] == true"
     alerts:
       - type: pushover
+  - name: pihole
+    group: infrastructure
+    url: "ssh://pihole.internal"
+    interval: 1m
+    ssh:
+      username: "$${PI_SSH_USER}"
+      password: "$${PI_SSH_PASSWORD}"
+    body: |
+      {
+        "command": "uptime"
+      }
+    conditions:
+      - "[STATUS] == 0"
+      - "[CONNECTED] == true"
+    alerts:
+      - type: pushover
