--- a/k8s/apps/observability/speedtest-exporter/app/helmrelease.yaml
+++ b/k8s/apps/observability/speedtest-exporter/app/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       interval: 60m
       sourceRef:
         kind: HelmRepository
-        name: bjw-s-charts
+        name: bjw-s
         namespace: flux-system
   maxHistory: 2
   install:
