--- a/k8s/apps/observability/speedtest-exporter/ks.yaml
+++ b/k8s/apps/observability/speedtest-exporter/ks.yaml
@@ -1,18 +1,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &appname speedtest-exporter
+  name: &app speedtest-exporter
   namespace: flux-system
 spec:
   targetNamespace: observability
   commonMetadata:
     labels:
-      app.kubernetes.io/name: *appname
-  interval: 30m
-  timeout: 5m
-  path: "./k8s/apps/observability/speedtest-exporter/app"
+      app.kubernetes.io/name: *app
+  path: ./k8s/apps/observability/speedtest-exporter/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: homelab
   wait: true
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
