feat: move media paths to match new nfs layout, add slskd and deemix

--- a/k8s/apps/default/bazarr/app/helmrelease.yaml
+++ b/k8s/apps/default/bazarr/app/helmrelease.yaml
@@ -118,9 +118,9 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs
+        path: /mnt/nfs/media
         globalMounts:
-          - path: /data
+          - path: /media
       scripts:
         type: configMap
         name: bazarr-scripts
