--- a/k8s/apps/default/filebrowser/app/helmrelease.yaml
+++ b/k8s/apps/default/filebrowser/app/helmrelease.yaml
@@ -92,4 +92,4 @@ spec:
         server: nas.internal
         path: /mnt/nfs
         globalMounts:
-          - path: /data
+          - path: /nfs
