--- a/k8s/apps/default/plex/app/helmrelease.yaml
+++ b/k8s/apps/default/plex/app/helmrelease.yaml
@@ -126,7 +126,7 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs
+        path: /mnt/nfs/media
         globalMounts:
-          - path: /data
+          - path: /media
             readOnly: true
