--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -132,6 +132,7 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs
+        path: /mnt/nfs/media
         globalMounts:
-          - path: /data
+          - path: /media/downloads/torrents
+            subPath: downloads/torrents
