--- a/k8s/apps/default/radarr/app/helmrelease.yaml
+++ b/k8s/apps/default/radarr/app/helmrelease.yaml
@@ -118,6 +118,6 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs
+        path: /mnt/nfs/media
         globalMounts:
-          - path: /data
+          - path: /media
