--- a/k8s/apps/default/slskd/app/helmrelease.yaml
+++ b/k8s/apps/default/slskd/app/helmrelease.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: sonarr
+  name: slskd
 spec:
   interval: 30m
   chart:
@@ -26,40 +26,32 @@ spec:
       namespace: rook-ceph
   values:
     controllers:
-      sonarr:
+      slskd:
         annotations:
           reloader.stakater.com/auto: "true"
-        initContainers:
-          init-db:
-            image:
-              repository: ghcr.io/onedr0p/postgres-init
-              tag: 16
-            envFrom: &envFrom
-              - secretRef:
-                  name: sonarr-secret
         containers:
           app:
             image:
-              repository: ghcr.io/onedr0p/sonarr-develop
-              tag: 4.0.10.2656@sha256:4eb7790aeed145b5495951bd5e68a67c2f04693bfd3c9916ffd4667d4c8b8400
+              repository: ghcr.io/slskd/slskd
+              tag: 0.21.4@sha256:34c613067dac899eddee137fc90cf0c0510e573e083b4c7589e6a823009a859a
             env:
-              SONARR__APP__INSTANCENAME: Sonarr
-              # SONARR__APP__THEME: dark
-              SONARR__AUTH__METHOD: External
-              SONARR__AUTH__REQUIRED: DisabledForLocalAddresses
-              SONARR__LOG__DBENABLED: "False"
-              SONARR__LOG__LEVEL: info
-              SONARR__SERVER__PORT: &port 80
-              SONARR__UPDATE__BRANCH: develop
-              TZ: "Australia/Sydney"
-            envFrom: *envFrom
+              DOTNET_BUNDLE_EXTRACT_BASE_DIR: /tmp/.net
+              TZ: Australia/Sydney
+              SLSKD_APP_DIR: /config
+              SLSKD_HTTP_PORT: &port 80
+              SLSKD_NO_AUTH: true
+              SLSKD_NO_HTTPS: true
+              SLSKD_SLSK_LISTEN_PORT: &soulseekPort 50300
+            envFrom:
+              - secretRef:
+                  name: slskd-secret
             probes:
               liveness: &probes
                 enabled: true
                 custom: true
                 spec:
                   httpGet:
-                    path: /ping
+                    path: /health
                     port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
@@ -72,9 +64,10 @@ spec:
               capabilities: {drop: ["ALL"]}
             resources:
               requests:
-                memory: 256Mi
+                cpu: 10m
+                memory: 128Mi
               limits:
-                memory: 4Gi
+                memory: 1Gi
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -86,14 +79,30 @@ spec:
         seccompProfile: {type: RuntimeDefault}
     service:
       app:
-        controller: sonarr
+        controller: slskd
+        type: LoadBalancer
+        annotations:
+          lbipam.cilium.io/ips: 192.168.42.127
         ports:
           http:
             port: *port
+          soulseek:
+            enabled: true
+            port: *soulseekPort
+            protocol: TCP
+    serviceMonitor:
+      app:
+        serviceName: slskd
+        endpoints:
+          - port: http
+            scheme: http
+            path: /metrics
+            interval: 1m
+            scrapeTimeout: 10s
     ingress:
       app:
         annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.${SECRET_HOME_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: internal.${SECRET_HOME_DOMAIN}
         className: internal
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_HOME_DOMAIN}"
@@ -104,23 +113,20 @@ spec:
                   port: http
     persistence:
       config:
-        existingClaim: sonarr
-      scripts:
+        existingClaim: slskd
+      config-file:
         type: configMap
-        name: sonarr-configmap
-        defaultMode: 0775
+        name: slskd-configmap
         globalMounts:
-          - path: /scripts/pushover-notify.sh
-            subPath: pushover-notify.sh
-            readOnly: true
-          - path: /scripts/refresh-series.sh
-            subPath: refresh-series.sh
+          - path: /config/slskd.yml
+            subPath: slskd.yml
             readOnly: true
       tmp:
         type: emptyDir
       media:
         type: nfs
-        server: nas.internal
+        server: expanse.internal
         path: /mnt/nfs/media
         globalMounts:
-          - path: /media
+          - path: /media/downloads/soulseek
+            subPath: downloads/soulseek
