--- a/k8s/apps/default/stash/app/helmrelease.yaml
+++ b/k8s/apps/default/stash/app/helmrelease.yaml
@@ -68,6 +68,7 @@ spec:
       media:
         type: nfs
         server: nas.internal
-        path: /mnt/nfs
+        path: /mnt/nfs/media
         globalMounts:
-          - path: /data
+          - path: /media
+            subPath: downloads/torrents/complete/other
