fix: filebrowser path

--- a/k8s/apps/default/filebrowser/app/helmrelease.yaml
+++ b/k8s/apps/default/filebrowser/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
             env:
               TZ: Australia/Sydney
               FB_DATABASE: /config/filebrowser.db
-              FB_ROOT: /data
+              FB_ROOT: /nfs
               FB_LOG: stdout
               FB_NOAUTH: true
             probes:
