feat: add whisparr, add missing ks

--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -16,6 +16,10 @@ resources:
   - ./sonarr/ks.yaml
   - ./readarr/ks.yaml
   - ./lidarr/ks.yaml
+  - ./whisparr/ks.yaml
+  - ./flaresolverr/ks.yaml
+  - ./deemix/ks.yaml
+  - ./slskd/ks.yaml
   - ./recyclarr/ks.yaml
   - ./bazarr/ks.yaml
   - ./cross-seed/ks.yaml
